# personal-assistant

./: .gitignore  AGENTS.md  docker-compose.prod.yml  docker-compose.yml  plan.md
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  mypy.ini  pyproject.toml  ruff.toml  run-worker.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_finance.py  0002_add_budgets_table.py  0003_add_category_budget_limit.py  0003_add_receipt_logs_transcribed_status.py  0004_add_category_budget_limit.py  0004_remove_transfer_category_type.py  0005_remove_transfer_category_type.py  0006_add_is_fixed_to_categories.py  0007_add_user_category_budgets_consolidate_budget_fields.py  0008_add_chat_tables.py  1c2ba35e305a_add_receipt_logs_transcribed_status.py  f3da838a6225_add_savings_goals_table.py  fa5b13892978_add_account_initial_balance.py
backend/app/: main.py
backend/app/ai/: intent_classifier.py
backend/app/core/: auth.py  config.py  database.py  exceptions.py  logging.py  middleware.py  rate_limit.py  request_utils.py  response.py  upload_utils.py
backend/app/shared/: models.py  queue.py  storage.py  supabase_admin.py
backend/app/workers/: voice_processor.py
backend/scripts/: init-test-db.sql  seed_data.py
backend/tests/: conftest.py
backend/tests/integration/: test_categories_api.py  test_sync_api.py  test_transactions_api.py  test_users_api.py  test_voice_anonymous.py  test_voice_api.py  test_voice_worker.py
backend/tests/unit/: test_ai_insight.py  test_ai_tools.py  test_extractor.py  (+1 more)
mobile/: .env.example  (+8 more)
(+254 files in other folders)
